--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Palatino', 'Georgia', serif;
+    font-family: 'Palatino', 'MinecraftCHMC', serif;
     background-color: black;
     color: white;
     margin: 0;
